fix overflow issue on conveyancing page.

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,8 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 @layer utilities {
@@ -71,6 +73,7 @@ body {
 @layer base {
   * {
     @apply border-border;
+    box-sizing: border-box;
   }
   body {
     @apply bg-background text-foreground;
